# salty-cpp-bot

./: .dockerignore  .gitignore  CMakeLists.txt  DOCKERFILE  Dockerfile  README.md  createAndRun.sh  db_create.sql  dockerChecker.py  example_config.json  makefile  playground.cpp  setup.sh  shopConfig.json  sql_save  startup.sh
.github/workflows/: cmake.yml  docker-image.yml
src/: main.cpp
src/cogs/: adminCog.cpp  economyCog.cpp
src/header/: cogs.h  cogs.hpp  config.h  config.hpp  ticket.hpp  utils.h  utils.hpp
src/include/: admin.hpp  cogs.hpp  config.hpp  economy.hpp  economyCogs.hpp  eventLoops.hpp  games.hpp  help.hpp  initCommands.hpp  joinToCreate.hpp  main.hpp  tests.hpp  ticket.hpp  ticketCogs.hpp  twitchIntegration.hpp  user.hpp  utils.hpp
src/source/: admin.cpp  cogs.cpp  config.cpp  economy.cpp  economyCogs.cpp  eventLoops.cpp  games.cpp  help.cpp  joinToCreate.cpp  tests.cpp  ticket.cpp  ticketCog.cpp  ticketCogs.cpp  ticketsCog.cpp  twitchIntegration.cpp  user.cpp  utils.cpp
src/source/cogs/: adminCog.cpp  economyCog.cpp  ticketCog.cpp
